--- a/CompModNervSys_exercise4.ipynb
+++ b/CompModNervSys_exercise4.ipynb
@@ -431,7 +431,12 @@
       "metadata": {
         "id": "rmDnNHKqGfo8"
       },
-      "source": []
+      "source": [
+        "It takes 5 time constants to reach steady state voltage, so in this case it would take 50 ms (5* 100e6 * .100e-9).\n",
+        "\n",
+        "As t approaches infinity, Vm = Rm*I + Vr \n",
+        "Thus, Vm = 100e6 * .5e-9 + -.075 = 50e-3 - .75 = .05 - .075 = -.025 Volts = 25 mV"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -557,11 +562,11 @@
       "execution_count": 37,
       "metadata": {
         "id": "d5i8OER-Gfo9",
-        "outputId": "b82d3996-2bf5-490f-a8ab-d5241435cff4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "b82d3996-2bf5-490f-a8ab-d5241435cff4"
       },
       "outputs": [
         {
@@ -632,6 +637,7 @@
         "for t,V,dt in zip(ts,Vm_numerical,dt_plot):\n",
         "    # fill in code below\n",
         "    ax.plot(t,'.',markersize=3,label='time step = {} ms'.format(dt))\n",
+        "\n",
         "ax.set_ylabel('Vm (mV)')\n",
         "ax.legend()\n",
         "ax = fig.add_subplot(212)\n",
